--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,6 +45,7 @@ header {
   padding-top: 40px;
 }
 
+
 /* button {
   padding: 10px;
   cursor: pointer;
@@ -144,9 +145,26 @@ li {
   flex-direction: column;
   justify-content: center;
 }
+.hash{
+  border : 2px solid #276830;
+  background-color: #419764;
+  font-size: 15px;
+  color :#fff;
+ padding:8px;
+  position: relative;
+  top: -120px;
+  margin:5px;
+  width: 90px;
+  height:18px;
+  border-radius: 10px;
+  font-weight:lighter;
+}
 
 .cafe-name {
   font-size: 24px;
+  position:relative;
+  top: 50px;
+  left:-70px;
   font-weight: bold;
   color: #333;
 }
@@ -154,10 +172,21 @@ li {
 .operating-hours,
 .operating-state,
 .menu {
-  font-size: 15px;
+  position: relative;
+  top: 50px;
+  margin : 20px;
+  left: -70px;
+  font-size: 17px;
   color: #666;
 }
+.cafeimg{
+  position: relative;
+  left: 90px;
+  top: -120px;
+  width: 120px; height:170px;border-radius:30px; 
+  border: 2px solid #333;
 
+}
 Resources fieldset {
   width: 98%;
   height: 300px;
