--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  height: 100vh;
 }
 
 body {
@@ -13,6 +12,8 @@ body {
 main {
   display: flex;
   flex: 1;
+  width: 100%;
+  height: 100vh;
 }
 
 /* 헤더 영역 */
@@ -46,23 +47,23 @@ header {
 }
 
 /* button {
-  padding: 10px;
-  cursor: pointer;
-  background: #D9D9D9;
-
-}
-
-#loginPopup {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 20px;
-  z-index: 1000;
-  background: white;
-  border: 1px solid black;
-} */
+    padding: 10px;
+    cursor: pointer;
+    background: #D9D9D9;
+  
+  }
+  
+  #loginPopup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    z-index: 1000;
+    background: white;
+    border: 1px solid black;
+  } */
 
 /* 사이드 영역 */
 
@@ -206,13 +207,6 @@ Resources fieldset {
   height: 300px;
 }
 
-/* -------------- */
-/* 지도 영역 */
-
-section {
-  flex: 1;
-}
-
 /* 추가된 스타일 */
 #loginPopup {
   display: none;
@@ -255,8 +249,48 @@ section {
   border: none;
 }
 
-@use postcss-color-function;
-@use postcss-nested;
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,700,900');
+/* -------------- */
+/* 지도 영역 */
 
-/* Base styling */
+section {
+  flex: 1;
+  width: 70%;
+}
+
+.map_wrap {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.radius_border {
+  border: 1px solid #919191;
+  border-radius: 5px;
+}
+.custom_zoomcontrol {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 36px;
+  height: 80px;
+  overflow: hidden;
+  z-index: 1;
+  background-color: #f5f5f5;
+}
+.custom_zoomcontrol span {
+  display: block;
+  width: 36px;
+  height: 40px;
+  text-align: center;
+  cursor: pointer;
+}
+.custom_zoomcontrol span img {
+  width: 15px;
+  height: 15px;
+  padding: 12px 0;
+  border: none;
+}
+.custom_zoomcontrol span:first-child {
+  border-bottom: 1px solid #bfbfbf;
+}
