--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,7 +45,6 @@ header {
   padding-top: 40px;
 }
 
-
 /* button {
   padding: 10px;
   cursor: pointer;
@@ -145,7 +144,7 @@ li {
   flex-direction: column;
   justify-content: center;
 }
-.cafeinfo-box{
+.cafeinfo-box {
   background-color: #fff;
   margin: 5px;
   height: 400px;
@@ -157,29 +156,28 @@ li {
   display: flex;
   flex-direction: column;
   justify-content: center;
-
 }
 
-.hash{
-  border : 2px solid #276830;
+.hash {
+  border: 2px solid #276830;
   background-color: #419764;
   font-size: 15px;
-  color :#fff;
- padding:8px;
+  color: #fff;
+  padding: 8px;
   position: relative;
   top: -120px;
-  margin:5px;
+  margin: 5px;
   width: 90px;
-  height:18px;
+  height: 18px;
   border-radius: 10px;
-  font-weight:lighter;
+  font-weight: lighter;
 }
 
 .cafe-name {
   font-size: 24px;
-  position:relative;
+  position: relative;
   top: 50px;
-  left:-70px;
+  left: -70px;
   font-weight: bold;
   color: #333;
 }
@@ -189,18 +187,19 @@ li {
 .menu {
   position: relative;
   top: 50px;
-  margin : 20px;
+  margin: 20px;
   left: -70px;
   font-size: 17px;
   color: #666;
 }
-.cafeimg{
+.cafeimg {
   position: relative;
   left: 90px;
   top: -120px;
-  width: 120px; height:170px;border-radius:30px; 
+  width: 120px;
+  height: 170px;
+  border-radius: 30px;
   border: 2px solid #333;
-
 }
 Resources fieldset {
   width: 98%;
