--- a/frontend/src/card/card.css
+++ b/frontend/src/card/card.css
@@ -4,3 +4,61 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.cafe-box {
+  background-color: #fff;
+  margin: 5px;
+  height: 300px;
+  padding: 20px;
+  border: 2px solid #333;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.hash {
+  border: 2px solid #276830;
+  background-color: #419764;
+  font-size: 15px;
+  color: #fff;
+  padding: 8px;
+  position: relative;
+  top: -120px;
+  margin: 5px;
+  width: 90px;
+  height: 18px;
+  border-radius: 10px;
+  font-weight: lighter;
+}
+
+.cafe-name {
+  font-size: 24px;
+  position: relative;
+  top: 50px;
+  left: -70px;
+  font-weight: bold;
+  color: #333;
+}
+
+.operating-hours,
+.operating-state,
+.menu {
+  position: relative;
+  top: 50px;
+  margin: 20px;
+  left: -70px;
+  font-size: 17px;
+  color: #666;
+}
+#cafeimg {
+  position: relative;
+  left: 90px;
+  top: -120px;
+  width: 120px;
+  height: 170px;
+  border-radius: 30px;
+  border: 2px solid #333;
+}
