--- a/frontend/src/cardInfo/cardInfo.css
+++ b/frontend/src/cardInfo/cardInfo.css
@@ -2,7 +2,7 @@
 .cafeinfo-box {
     background-color: #fff;
     margin: 5px;
-    height: 800px;
+    height: 1050px;
     padding: 20px;
     border: 2px solid #333;
     border-radius: 10px;
@@ -11,6 +11,60 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+  .review-box{
+    background-color: #7AC66D;
+    width: 230px;
+    height: 200px;
+    padding: 20px;
+    border: 2px solid #333;
+    border-radius: 10px;
+    
+  }
+  #review-name{
+    position: relative;
+    font-size: 23px; 
+    top:0px;
+    left: -70px;
+    height: 30px;
+    font-weight: bold;
+    
+  }
+  .review-wrap{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center;
+  }
+  .review{
+    position: relative;
+    border: 2px solid #000000;
+    background-color: #ffffff;
+    font-size: 15px;
+    color: #000000;
+    padding: 8px;
+    top:0px;
+    margin: 5px;
+    width: 200px;
+    height: 20px;
+    border-radius: 10px;
+    font-weight: lighter;
+  }
+  h3{
+    position:relative;
+    font-weight:lighter;
+    font-size: 18px;
+    width: 50px;
+    height: 20px;
+    left: 0px;
+  }
+  h4{
+    position:relative;
+    font-weight: lighter;
+    font-size:15px;
+    width: 200px;
+    height: 20px;
+    left: 20px;
+    top: -16px;
   }
   .hash-warp {
     display: flex;
@@ -48,10 +102,20 @@
     height:30px;
 
   }
+  #cof-icon{
+
+    position:relative;
+    width:10px;
+    height:10px;
+    left:0px;
+    top:10px;
+    
+  }
 
 #cafe-name {
   font-size: 24px;
   position: relative;
+  height: 30px;
   top: -30px;
   left: 0px;
   font-weight: bold;
@@ -61,17 +125,19 @@
 #operating-hours,
 #operating-state{
   position: relative;
-  top: -20px;
+  border: 2px solid #276830;
+  background-color: #d8e2dc;
+  top: -10px;
   height:30px;
   margin: 5px;
   left: 0px;
   font-size: 17px;
-  color: #666;
+  color: #333;
 }
 #menu{
 
   position:relative;
-  top:0px;
+  top:20px;
   
   font-size: 17px;
   color:#333;
@@ -92,7 +158,7 @@
   
   padding: 10px;
   margin:5px;
-  border-radius: 100px;
+  border-radius: 30px;
   border: 1px solid #333;
 
 }
