--- a/frontend/src/header/header.css
+++ b/frontend/src/header/header.css
@@ -1,28 +1,48 @@
+/* 헤더 영역 */
+
 header {
-    width: 100%;
-    height: 109px;
-    background-color: #224932;
-    border-bottom: 5px solid black;
+  width: 100%;
+  height: 109px;
+  background-color: #224932;
+  border-bottom: 5px solid black;
+}
+
+/* 로고 */
+#logo {
+  float: left;
+  width: 50px;
+  height: 65px;
+  padding: 20px;
+  color: white;
+}
+
+/* 배너 이름 */
+#siteName {
+  color: white;
+  font-family: 'EHWA';
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: center;
+  padding-top: 40px;
+}
+
+/* button {
+    padding: 10px;
+    cursor: pointer;
+    background: #D9D9D9;
+  
   }
   
-  /* 로고 */
-  #logo {
-    float: left;
-    width: 50px;
-    height: 65px;
+  #loginPopup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 20px;
-    color: white;
-  }
-  
-  /* 배너 이름 */
-  #siteName {
-    color: white;
-    font-family: 'EHWA';
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 0em;
-    text-align: center;
-    padding-top: 40px;
-  }
-  
+    z-index: 1000;
+    background: white;
+    border: 1px solid black;
+  } */
