--- a/frontend/src/sideBar/sideBar.css
+++ b/frontend/src/sideBar/sideBar.css
@@ -1,17 +1,17 @@
+/* 사이드 영역 */
 
 aside {
-    width: 30%;
-    max-width: 350px;
-    border-right: 5px solid black;
-    padding: 20px;
-    overflow-y: auto;
-    flex-shrink: 0;
-    max-height: 800px;
-  }
-  
-  #side {
-    width: 98%;
-    padding: 0;
-    margin: 0 auto;
-  }
-  
+  width: 30%;
+  max-width: 350px;
+  border-right: 5px solid black;
+  padding: 20px;
+  overflow-y: auto;
+  flex-shrink: 0;
+  max-height: 800px;
+}
+
+#side {
+  width: 98%;
+  padding: 0;
+  margin: 0 auto;
+}
