--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,6 +15,102 @@ main {
   width: 100%;
   height: 100vh;
 }
+/* 카페 리스트 */
+.cafeList {
+  margin-left: 0;
+  height: auto;
+}
+
+ul,
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  height: auto;
+}
+#cafename {
+  font-size: 15px;
+}
+
+.flex-container {
+  display: flex;
+  margin: 5px;
+  border: 1px solid lightgray;
+  border-radius: 10px;
+  background-color: rgb(85, 85, 85);
+  font-size: 24px;
+}
+/*.flex-container.row{flex-direction: row;}*/
+.cafe-box {
+  background-color: #fff;
+  margin: 5px;
+  height: 300px;
+  padding: 20px;
+  border: 2px solid #333;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cafeinfo-box {
+  background-color: #fff;
+  margin: 5px;
+  height: 400px;
+  padding: 20px;
+  border: 2px solid #333;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.hash {
+  border: 2px solid #276830;
+  background-color: #419764;
+  font-size: 15px;
+  color: #fff;
+  padding: 8px;
+  position: relative;
+  top: -120px;
+  margin: 5px;
+  width: 90px;
+  height: 18px;
+  border-radius: 10px;
+  font-weight: lighter;
+}
+
+.cafe-name {
+  font-size: 24px;
+  position: relative;
+  top: 50px;
+  left: -70px;
+  font-weight: bold;
+  color: #333;
+}
+
+.operating-hours,
+.operating-state,
+.menu {
+  position: relative;
+  top: 50px;
+  margin: 20px;
+  left: -70px;
+  font-size: 17px;
+  color: #666;
+}
+.cafeimg {
+  position: relative;
+  left: 90px;
+  top: -120px;
+  width: 120px;
+  height: 170px;
+  border-radius: 30px;
+  border: 2px solid #333;
+}
 
 /* 추가된 스타일 */
 #loginPopup {
