--- a/frontend/src/hashtags/hashtags.css
+++ b/frontend/src/hashtags/hashtags.css
@@ -1,9 +1,12 @@
 /* 해시태그 */
 #hashtags {
-  background: #d9d9d9;
-  width: 98%;
-  height: 50px;
+  background: #bddcb8;
+  width: 99%;
+  height: 80px;
   border-radius: 10px;
-  margin-top: 10px;
+  margin-top: 12px;
+  margin-bottom: 30px;
   font-size: 15px;
+  border: 0;
+  box-shadow: 2px 5px 3px rgba(0, 0, 0, 0.5);
 }
