--- a/frontend/src/header/header.css
+++ b/frontend/src/header/header.css
@@ -4,45 +4,111 @@ header {
   width: 100%;
   height: 109px;
   background-color: #224932;
-  border-bottom: 5px solid black;
+  border-bottom: 2px solid black;
 }
 
 /* 로고 */
-#logo {
+#logo img {
   float: left;
-  width: 50px;
-  height: 65px;
-  padding: 20px;
-  color: white;
+  height: 100px;
+  padding: 10px;
+  margin-left: 10px;
+  margin-top: -3px;
 }
 
 /* 배너 이름 */
 #siteName {
   color: white;
-  font-family: 'EHWA';
-  font-size: 15px;
-  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
+  font-size: 19px;
+  font-weight: 100;
   line-height: 30px;
   letter-spacing: 0em;
   text-align: center;
+  position: relative;
   padding-top: 40px;
+  right: 90px;
 }
 
-/* button {
-    padding: 10px;
-    cursor: pointer;
-    background: #D9D9D9;
-  
-  }
-  
-  #loginPopup {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    z-index: 1000;
-    background: white;
-    border: 1px solid black;
-  } */
+#coffeeImage1 img {
+  position: relative;
+  top: -50px;
+  left: -180px;
+  width: 75px;
+  margin-bottom: 10px;
+}
+
+#coffeeImage2 img {
+  position: relative;
+  top: -142px;
+  left: 243px;
+  width: 75px;
+  margin-bottom: 10px;
+}
+
+#container {
+  float: right;
+  position: relative;
+  top: -225px;
+}
+
+.loginBtn,
+.joinBtn {
+  margin-left: -20px;
+  width: 150px;
+  height: 50px;
+  background-color: #3f7566;
+  border-radius: 30px;
+  cursor: pointer;
+  color: #fff;
+  font-size: 22px;
+  border: none;
+  font-family: 'Nanum Gothic', sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.loginBtn {
+  left: -45px;
+}
+
+.joinBtn {
+  left: -15px;
+}
+
+/* #loginPopup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  padding: 20px;
+  background: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+#loginBtnContainer {
+  position: relative;
+  z-index: 1001;
+  top: 100px;
+  left: 80px;
+}
+#loginForm {
+  display: flex;
+  flex-direction: column;
+}
+
+#loginForm label {
+  margin-bottom: 5px;
+}
+
+#loginForm input {
+  padding: 8px;
+  margin-bottom: 10px;
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1&family=Nanum+Gothic&family=Nanum+Pen+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1&family=Nanum+Gothic&family=Nanum+Pen+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1&family=Nanum+Gothic&family=Nanum+Pen+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
