--- a/frontend/src/sideBar/sideBar.css
+++ b/frontend/src/sideBar/sideBar.css
@@ -1,9 +1,9 @@
 /* 사이드 영역 */
 
 aside {
-  width: 30%;
-  max-width: 350px;
-  border-right: 5px solid black;
+  width: 450px;
+  max-width: 450px;
+  border-right: 2px solid black;
   padding: 20px;
   overflow-y: auto;
   flex-shrink: 0;
