--- a/frontend/src/cardInfo/cardInfo.css
+++ b/frontend/src/cardInfo/cardInfo.css
@@ -1,91 +1,75 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
+.cafeinfo-box {
+  background-color: #fff;
+  margin: 0px;
+  height: 1600px;
+  padding: 0px;
+  border-radius: 10px;
+  text-align: center;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  justify-content: center;
 }
 
-main {
+.hash-warp {
   display: flex;
-  flex: 1;
-  width: 100%;
-  height: 100vh;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-.cafeinfo-box {
-    background-color: #fff;
-    margin: 5px;
-    height: 1050px;
-    padding: 20px;
-    border: 2px solid #333;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  
-  .hash-warp {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .hash_info {
-    
-    border: 2px solid #276830;
-    background-color: #419764;
-    font-size: 15px;
-    color: #fff;
-    text-shadow: #000000;
-    padding: 8px;
-    position: relative;
-    top: -20px;
-    margin: 5px;
-    width: 90px;
-    height: 18px;
-    border-radius: 10px;
-    font-weight: lighter;
-  }
-  #cafeinfoimg {
-    position: relative;
-    left: 0px;
-    top:  -20px;
-    width: 270px;
-    height: 270px;
-    border-radius: 30px;
-    border: 2px solid #333;
-  }
-  #back_icon{
-    position:relative;
-    left:0px;
-    top:0px;
-    width:30px;
-    height:30px;
-
-  }
-  #cof-icon{
-
-    position:relative;
-    width:10px;
-    height:10px;
-    left:0px;
-    top:10px;
-    
-  }
+.hash_info {
+  background-color: #61886e;
+  font-size: 15px;
+  color: #fff;
+  text-shadow: #000000;
+  padding: 8px;
+  position: relative;
+  top: -20px;
+  margin: 5px;
+  width: 160px;
+  height: 40px;
+  text-align: center;
+  border-radius: 15px;
+  font-weight: lighter;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+#cafeinfoimg {
+  position: relative;
+  left: 0px;
+  top: 10px;
+  width: 400px;
+  height: 280px;
+  border-radius: 20px;
+  margin-bottom: 30px;
+}
+#back_icon {
+  position: absolute;
+  left: -5px;
+  top: -10px;
+  width: 30px;
+  height: 30px;
+}
+#cof-icon {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  left: 0px;
+  top: 10px;
+}
 
 #cafe-name {
-  font-size: 24px;
+  width: 370px;
+  font-size: 35px;
+  text-align: left;
   position: relative;
-  height: 30px;
+  padding: 10px;
+  height: 100px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   top: -30px;
-  left: 0px;
+  left: 20px;
   font-weight: bold;
   color: #333;
+  background-color: #7ac66d81;
+  box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
 }
 
 #operating-hours,
@@ -93,18 +77,19 @@ main {
   position: relative;
   border: 2px solid #276830;
   background-color: #d8e2dc;
-  top: -10px;
-  height: 30px;
-  margin: 5px;
-  left: 0px;
-  font-size: 17px;
+  height: 200px;
+  margin-top: 30px;
+  margin-left: 20px;
+  margin-bottom: 60px;
+  text-align: center;
+  font-size: 20px;
   color: #333;
+  width: 370px;
 }
 
-button{
-position: relative;
-width: 20px;
-height:20px;
-left: -10px;
-
+button {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  left: -10px;
 }
