[FE] feat: review->write 컴포넌트 전환 추가

--- a/frontend/src/review/review.css
+++ b/frontend/src/review/review.css
@@ -25,10 +25,11 @@
   padding: 8px;
   top: 0px;
   margin: 5px;
-  width: 200px;
+  width: 270px;
   height: 20px;
   border-radius: 10px;
   font-weight: lighter;
+  border: 1px solid #7c987f;
 }
 #review-text {
   position: relative;
