--- a/frontend/src/cardInfo/cardInfo.css
+++ b/frontend/src/cardInfo/cardInfo.css
@@ -40,10 +40,11 @@
   border-radius: 20px;
   margin-bottom: 30px;
 }
+
 #back_icon {
   position: absolute;
-  left: -5px;
-  top: -10px;
+  left: -1px;
+  top: 0px;
   width: 30px;
   height: 30px;
 }
@@ -77,7 +78,7 @@
   position: relative;
   border: 2px solid #276830;
   background-color: #d8e2dc;
-  height: 200px;
+  height: 25px;
   margin-top: 30px;
   margin-left: 20px;
   margin-bottom: 60px;
@@ -87,9 +88,34 @@
   width: 370px;
 }
 
-button {
+.write_button {
   position: relative;
-  width: 20px;
-  height: 20px;
-  left: -10px;
+  background-color: #276830;
+  color:#fff;
+  border-radius: 15px;
+  width: 70px;
+  height: 30px;
+  left: 0px;
+  top: -240px;
+}
+.review_button {
+  position: relative;
+  background-color: #276830;
+  color:#fff;
+  border-radius: 15px;
+  width: 70px;
+  height: 30px;
+  left: 150px;
+  top: -240px;
+}
+
+.backbtn{
+background-color: #fff;
+  position: relative;
+  left: 10px;
+  top: 0px;
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+
 }
