--- a/frontend/src/header/header.css
+++ b/frontend/src/header/header.css
@@ -62,6 +62,7 @@ header {
   cursor: pointer;
   color: #fff;
   font-size: 22px;
+  margin: 5px;
   border: none;
   font-family: 'Nanum Gothic', sans-serif;
   font-weight: 500;
@@ -76,15 +77,15 @@ header {
   left: -15px;
 }
 
-/* #loginPopup {
-  display: none;
-  position: fixed;
+ #loginPopup {
+  
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 300px;
   padding: 20px;
-  background: #fff;
+  background: #296d3a;
   border: 1px solid #ccc;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
@@ -107,8 +108,7 @@ header {
 #loginForm input {
   padding: 8px;
   margin-bottom: 10px;
-} */
-
+} 
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1&family=Nanum+Gothic&family=Nanum+Pen+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1&family=Nanum+Gothic&family=Nanum+Pen+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1&family=Nanum+Gothic&family=Nanum+Pen+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
