--- a/frontend/src/card/card.css
+++ b/frontend/src/card/card.css
@@ -4,40 +4,36 @@
   position: relative;
   background-color: #fff;
   width: 92%;
-  height: 300px;
+  height: fit-content;
+  min-height: min-content;
+  max-height: max-content;
   padding: 10px;
   margin-top: 40px;
   background-color: #84a6352c;
   border-radius: 10px;
   box-shadow: 5px 8px 3px rgba(0, 0, 0, 0.5);
-  /* text-align: center;
-  display: flex;
   flex-direction: column;
-  justify-content: center; */
+  /*justify-content: center; */
 }
 
 .cafe-name {
-  font-size: 28px;
+  font-size: 20px;
   position: absolute;
-  width:270px;
-  height:auto;
-  text-shadow: #000000;
+  width: 260px;
+  height: auto;
   top: 17px;
-  left: -10px;
+  left: 15px;
   font-weight: bold;
-  text-align:  center;
-  color: #fff;
-  transform: translate(10%, 30%);
-  background-color: #419764;
-  border-radius: 15px;
-  border-color: #666;
+  color: #333;
+  background-color: #84a6352c;
 }
 
 .operating-hours,
 .operating-state,
 .menu {
   position: relative;
-  top: 80px;
+  top: 55px;
+  margin-top: 10px;
   margin: 20px;
   margin-left: 10px;
   font-size: 20px;
@@ -49,9 +45,9 @@
 #cafeimg {
   position: absolute;
   left: 290px;
-  top: 20px;
-  width: 120px;
-  height: 170px;
+  top: 18px;
+  width: 115px;
+  height: 165px;
   border-radius: 30px;
 }
 
@@ -61,7 +57,7 @@
   font-size: 15.5px;
   color: #fff;
   padding: 8px;
-  top: 78px;
+  top: 60px;
   margin: 5px;
   width: 155px;
   height: 20px;
@@ -73,8 +69,9 @@
 
 .hash-warp {
   display: flex;
+  margin: 10px 0;
   flex-wrap: wrap;
   justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 60px;
 }
-
-
