--- a/frontend/src/search/search.css
+++ b/frontend/src/search/search.css
@@ -20,6 +20,9 @@ form {
   box-shadow: 2px 5px 3px rgba(0, 0, 0, 0.5);
   border: 0;
   padding-left: 60px;
+  font-size: 23px;
+  left: 1px;
+  top:15px;
 }
 
 #cafe-search::placeholder {
@@ -31,7 +34,7 @@ form {
 
 .icon-search {
   position: absolute;
-  top: 20px;
+  top: 24px;
   left: 10px;
   font-size: 30px;
 }
