--- a/frontend/src/cardInfo/cardInfo.css
+++ b/frontend/src/cardInfo/cardInfo.css
@@ -58,11 +58,11 @@
 
 #cafe-name {
   width: 370px;
-  font-size: 35px;
+  font-size: 28px;
   text-align: left;
   position: relative;
   padding: 10px;
-  height: 100px;
+  height: auto;
   margin-top: 30px;
   margin-bottom: 30px;
   top: -30px;
@@ -73,25 +73,25 @@
   box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
 }
 
-#operating-hours,
-#operating-state {
+#operating-hours {
   position: relative;
   border: 2px solid #276830;
   background-color: #d8e2dc;
-  height: 25px;
-  margin-top: 30px;
+  height: 200px;
+  padding: 10px;
+  margin-top: 10px;
   margin-left: 20px;
   margin-bottom: 60px;
   text-align: center;
   font-size: 20px;
   color: #333;
-  width: 370px;
+  width: 360px;
 }
 
 .write_button {
   position: relative;
   background-color: #276830;
-  color:#fff;
+  color: #fff;
   border-radius: 15px;
   width: 70px;
   height: 30px;
@@ -101,7 +101,7 @@
 .review_button {
   position: relative;
   background-color: #276830;
-  color:#fff;
+  color: #fff;
   border-radius: 15px;
   width: 70px;
   height: 30px;
@@ -109,13 +109,12 @@
   top: -240px;
 }
 
-.backbtn{
-background-color: #fff;
+.backbtn {
+  background-color: #fff;
   position: relative;
   left: 10px;
   top: 0px;
   width: 30px;
   height: 30px;
   border-radius: 100%;
-
 }
