--- a/frontend/src/header/header.css
+++ b/frontend/src/header/header.css
@@ -20,29 +20,28 @@ header {
 #siteName {
   color: white;
   font-family: 'Roboto', sans-serif;
-  font-size: 19px;
+  font-size: 25px;
   font-weight: 100;
   line-height: 30px;
   letter-spacing: 0em;
   text-align: center;
   position: relative;
   padding-top: 40px;
-  right: 90px;
+  right: 100px;
 }
 
 #coffeeImage1 img {
   position: relative;
   top: -50px;
-  left: -180px;
+  left: -220px;
   width: 75px;
- 
   margin-bottom: 10px;
 }
 
 #coffeeImage2 img {
   position: relative;
-  top: -142px;
-  left: 243px;
+  top: -140px;
+  left: 280px;
   width: 75px;
   margin-bottom: 10px;
 }
@@ -53,7 +52,7 @@ header {
   top: -225px;
 }
 
-.loginBtn,
+/* .loginBtn,
 .joinBtn {
   margin-left: -20px;
   width: 150px;
@@ -109,7 +108,7 @@ header {
 #loginForm input {
   padding: 8px;
   margin-bottom: 10px;
-} 
+}  */
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1&family=Nanum+Gothic&family=Nanum+Pen+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1&family=Nanum+Gothic&family=Nanum+Pen+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1&family=Nanum+Gothic&family=Nanum+Pen+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
