--- a/frontend/src/review/review.css
+++ b/frontend/src/review/review.css
@@ -10,30 +10,27 @@
   left: 25px;
   background-color: #7ac66d81;
   box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
-}
-
-.review-wrap {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-.review {
-  position: relative;
 
+.review {
+  position: absolute;
   background-color: #ffffff;
   font-size: 15px;
   color: #000000;
   padding: 8px;
-  top: 0px;
+  top: 50px;
   margin: 5px;
-  width: 270px;
-  height: 20px;
+  width: 300px;
+  height: 140px;
   border-radius: 10px;
   font-weight: lighter;
   border: 1px solid #7c987f;
 }
 #review-text {
-  position: relative;
+  position: absolute;
   font-weight: lighter;
   font-size: 18px;
   width: 50px;
